# der

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DER_VS_RUST.md  FAQ.md  GETTING_STARTED.md  LICENSE  QUICK_START.md  README.md  test_hello.rs
docs/: der_architecture.md  der_architecture_zh.md
examples/: binary_comparison.rs  bubble_sort.rs  comprehensive_demo.rs  create_der_binary.rs  create_sample_der_files.rs  demo.rs  der_vs_other_languages.rs  hello_world.rs  semantic_demo.rs
showcase/: der_language_demo.rs
src/: lib.rs  main.rs
src/compiler/: ai_translator.rs  intent_parser.rs  mod.rs
src/core/: binary_format.rs  deserializer.rs  mod.rs  semantic_annotation.rs  serializer.rs
src/runtime/: async_runtime.rs  context.rs  error.rs  executor.rs  memory.rs  mod.rs  value.rs
src/tests/: async_tests.rs  binary_format_tests.rs  integration_tests.rs  memory_tests.rs  mod.rs  runtime_tests.rs  verification_tests.rs
src/types/: mod.rs  type_checker.rs  type_inference.rs  type_system.rs
src/verification/: constraints.rs  mod.rs  proof.rs  traits.rs  verifier.rs
src/visualization/: graph_renderer.rs  mod.rs  text_renderer.rs
tools/: der_disassembler.rs  der_inspector.rs  der_optimizer.rs  der_to_wasm.rs  text_to_der.rs
